// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<VideoPlayer> snapshots: should render "Черное воскресенье" 1`] = `
<video
  className=""
  loop={true}
  muted={true}
  onCanPlay={[Function]}
  onLoadedMetadata={[Function]}
  onPause={[Function]}
  onPlay={[Function]}
  onTimeUpdate={[Function]}
  onWaiting={[Function]}
  poster="/black-sunday-image"
  src="/black-sunday-preview"
/>
`;

exports[`<VideoPlayer> snapshots: should render "Черное воскресенье" with className "video-player" 1`] = `
<video
  className="video-player"
  loop={true}
  muted={true}
  onCanPlay={[Function]}
  onLoadedMetadata={[Function]}
  onPause={[Function]}
  onPlay={[Function]}
  onTimeUpdate={[Function]}
  onWaiting={[Function]}
  poster="/black-sunday-image"
  src="/black-sunday-preview"
/>
`;
